cmake_minimum_required(VERSION 3.9)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(LeetCode "001. Two Sum/solution.h" "001. Two Sum/test.cpp" "004. Median of Two Sorted Arrays/solution.h" "004. Median of Two Sorted Arrays/test.cpp" "026. Remove Duplicates from Sorted Array/solution.h" "026. Remove Duplicates from Sorted Array/test.cpp" "027. Remove Element/solution.h" "027. Remove Element/test.cpp" "031. Next Permutation/solution.h" "031. Next Permutation/test.cpp" "094. Binary Tree Inorder Traversal/solution.h" "094. Binary Tree Inorder Traversal/test.cpp")